--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="us">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Barber´s CAD</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Barber´s Cad - Sistema de cadastro de cliente para barbearias</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/img/logo_baberscad.webp"></a>
+                <a class="navbar-brand pr-6 pl-10" href="home.html"><img src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,20 +24,20 @@
                             <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/admin">Admin</a>
+                            <a class="nav-link text-white active" aria-current="page" href="/admin">Admin</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/admin">Admin</a>
+                            <a class="nav-link text-white active" aria-current="page" href="/admin">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="menu_clientes">Clientes</a>
+                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_clientes">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="menu_usuarios">Usuários</a>
+                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_usuarios">Usuários</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="menu_sair">Sair</a>
+                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_sair">Sair</a>
                         </li>
                         {% endif %}
                     </ul>
@@ -83,14 +82,14 @@
                             <div class="row">
                                 <div class="col-6">
                                     <div class="card">
-                                        <div class="card-body" id="total-usuarios">
+                                        <div class="card-body bg-black text-white" id="total-usuarios">
                                             Total Usuários: 0.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="card">
-                                        <div class="card-body" id="total-clientes">
+                                        <div class="card-body bg-primary text-white" id="total-clientes">
                                             Total Clientes: 0.
                                         </div>
                                     </div>
@@ -190,7 +189,7 @@
                     context: document.body
                 }).done(function (data) {
                     $('#total-usuarios').text(`Total de Usuários: ${data[0]}`)
-                    $('#total-clientes').text(`Total de Clientes: ${data[0]}`)
+                    $('#total-clientes').text(`Total de Clientes: ${data[1]}`)
                 })
 
             // Envio do Formulario de Login
