alterado col-sm-12 col-lg-4

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -49,7 +49,7 @@
         <div class="container-fluid">
             <div class="row justify-content-center pt-5">
                 {% if session['logado'] == False %}
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-lg-4">
                     <form id="formulario-login">
                         <div class="input-group mb-3">
                             <span class="input-group-text">Usuário</span>
@@ -118,7 +118,7 @@
                         <form>
                             <div class="container-fluid">
                                 <div class="row justify-content-center">
-                                    <div class="col-sm-12 col-md-4">
+                                    <div class="col-sm-12 col-lg-4">
                                         <div class="input-group mb-3">
                                             <span class="input-group-text">Usuário</span>
                                             <input type="text" class="form-control" placeholder="Usuário"
@@ -130,7 +130,7 @@
                                                 aria-label="Senha" aria-describedby="senha" id="novo-senha">
                                         </div>
                                     </div>
-                                    <div class="col-sm-12 col-md-4 align-items-center d-flex">
+                                    <div class="col-sm-12 col-lg-4 align-items-center d-flex">
                                         <button id="adicionar-usuario" class="btn btn-primary adicionar-usuario"
                                             type="button">Adicionar novo
                                             Usuário</button>
