--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
     <main>
         <div class="container-fluid">
             <div class="row justify-content-center pt-5">
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-lg-4">
                     <form id="formulario">
                         <div class="input-group mb-3">
                             <label class="input-group-text" for="perfil">
