--- a/templates/admin.html
+++ b/templates/admin.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <div class="col mb-5">
                                     <div class="card">
-                                        <div class="card-body">
+                                        <div class="card-body text-black">
                                             Bem vindo ao nosso sistema, {{ session['usuario'] }}.
                                         </div>
                                     </div>
@@ -98,6 +98,10 @@
                         </div>
                     </div>
                     <div id="pagina-clientes" class="d-none">
+                        <div id="title page">
+                            <h4>Clientes</h4>
+                            <p>Abaixo confira a relação de todos os clientes cadastrados no sistema</p>
+                        </div>
                         <table class="table table-striped">
                             <thead>
                                 <tr>
