add titulo usuario

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -119,6 +119,10 @@
                         </table>
                     </div>
                     <div id="pagina-usuarios" class="d-none">
+                        <div id="title page">
+                            <h4>Usuários</h4>
+                            <p>Abaixo confira a relação de todos os usuários do sistema</p>
+                        </div>
                         <form>
                             <div class="container-fluid">
                                 <div class="row justify-content-center">
