--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,7 +8,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="ss">
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
