--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Barber´s Cad - Sistema de cadastro de cliente para barbearias</title>
+    <title>Barber´s  - Sistema de cadastro de cliente para barbearias</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
