--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="us">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Cd - Sistema de cadastro de cliente para barbearias</title>
+    <title>H CAR Sys - Sitema de Contro de Revisão Periodica Veicular</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand pr-6 pl-10" href="/"><img src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
+                <a class="navbar-brand pr-6 pl-10" href="/"><img  alt="logo" src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon bg-white"></span>
