--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="us">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>H CAR Sistema de cadastro de cliente para barbearias</title>
+    <title>H CAR Sys - Sitema de Contro de Revisão Periodica Veicular</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand pr-6 pl-10" href="/"><img src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
+                <a class="navbar-brand pr-6 pl-10" href="/"><img alt="logo" src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon bg-white"></span>
@@ -37,13 +37,14 @@
                     <form id="formulario">
                         <div class="input-group mb-3">
                             <label class="input-group-text" for="perfil">
-                                Perfil
+                                Serviço
                             </label>
                             <select class="form-select" id="perfil">
                                 <option selected>Escolher...</option>
-                                <option value="1">Cabelo</option>
-                                <option value="2">Barba</option>
-                                <option value="3">Infantil</option>
+                                <option value="1">Troca de Oleo</option>
+                                <option value="2">Revisão Geral</option>
+                                <option value="3">Suspensão</option>
+                                <option value="3">Conserto de Rodas</option>
                             </select>
                         </div>
                         <div class="input-group mb-3">
