alteracao para servicos

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                     <form id="formulario">
                         <div class="input-group mb-3">
                             <label class="input-group-text" for="perfil">
-                                Serviço
+                                Serviços
                             </label>
                             <select class="form-select" id="perfil">
                                 <option selected>Escolher...</option>
