--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>H CAR Sys - Sitema de Contro de Revisão Periodica Veicular</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://hcarsys.prostart.com.br/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand pr-6 pl-10" href="/"><img alt="logo" src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
+                <a class="navbar-brand pr-6 pl-10" href="https://hcarsys.prostart.com.br/"><img alt="logo" src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon bg-white"></span>
@@ -20,10 +20,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-wite hactive" aria-current="page" href="/">Home</a>
+                            <a class="nav-link text-wite hactive" aria-current="page" href="https://hcarsys.prostart.com.br/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/admin">Admin</a>
+                            <a class="nav-link text-white" href="https://hcarsys.prostart.com.br/admin">Admin</a>
                         </li>
                     </ul>
                 </div>
