--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
-                <a class="navbar-brand pr-6 pl-10" href="https://hcarsys.prostart.com.br/"><img  alt="logo" src="/static/img/logo_baberscad-w.webp" style="height: 70px;"></a>
+                <a class="navbar-brand pr-6 pl-10" href="https://hcarsys.prostart.com.br/"><img  alt="logo" src="https://hcarsys.prostart.com.br/static/img/logo_hcar.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon bg-white"></span>
