--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-black">
+        <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand pr-6 pl-10" href="https://hcarsys.prostart.com.br/"><img alt="logo" src="https://hcarsys.prostart.com.br/static/img/logo_hcar.webp" style="height: 70px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
