--- a/templates/admin.html
+++ b/templates/admin.html
@@ -24,20 +24,20 @@
                             <a class="nav-link" href="https://hcarsys.prostart.com.br/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white active" aria-current="page" href="https://hcarsys.prostart.com.br/admin">Admin</a>
+                            <a class="nav-link text-green active" aria-current="page" href="https://hcarsys.prostart.com.br/admin">Admin</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link text-white active" aria-current="page" href="https://hcarsys.prostart.com.br/admin">Admin</a>
+                            <a class="nav-link text-green active" aria-current="page" href="https://hcarsys.prostart.com.br/admin">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_clientes">Clientes</a>
+                            <a class="nav-link text-green active" aria-current="page" href="#" id="menu_clientes">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_usuarios">Usuários</a>
+                            <a class="nav-link text-green active" aria-current="page" href="#" id="menu_usuarios">Usuários</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white active" aria-current="page" href="#" id="menu_sair">Sair</a>
+                            <a class="nav-link text-green active" aria-current="page" href="#" id="menu_sair">Sair</a>
                         </li>
                         {% endif %}
                     </ul>
@@ -82,14 +82,14 @@
                             <div class="row">
                                 <div class="col-6">
                                     <div class="card">
-                                        <div class="card-body bg-light text-white" id="total-usuarios">
+                                        <div class="card-body bg-light text-green" id="total-usuarios">
                                             Total Usuários: 0.
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="card">
-                                        <div class="card-body bg-primary text-white" id="total-clientes">
+                                        <div class="card-body bg-primary text-green" id="total-clientes">
                                             Total Clientes: 0.
                                         </div>
                                     </div>
