--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
                             <a class="nav-link text-wite hactive" aria-current="page" href="https://hcarsys.prostart.com.br/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="https://hcarsys.prostart.com.br/admin">Admin</a>
+                            <a class="nav-link text-green" href="https://hcarsys.prostart.com.br/admin">Admin</a>
                         </li>
                     </ul>
                 </div>
