--- a/templates/admin.html
+++ b/templates/admin.html
@@ -62,7 +62,7 @@
                                 aria-describedby="senha" id="senha">
                         </div>
                         <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="submit">Acessar Sistema</button>
+                            <button class="btn btn-success" type="submit">Acessar Sistema</button>
                         </div>
                     </form>
                 </div>
@@ -89,7 +89,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="card">
-                                        <div class="card-body bg-primary text-green" id="total-clientes">
+                                        <div class="card-body bg-success text-green" id="total-clientes">
                                             Total Clientes: 0.
                                         </div>
                                     </div>
@@ -139,7 +139,7 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-12 col-lg-4 align-items-center d-flex">
-                                        <button id="adicionar-usuario" class="btn btn-primary adicionar-usuario"
+                                        <button id="adicionar-usuario" class="btn btn-success adicionar-usuario"
                                             type="button">Adicionar novo
                                             Usuário</button>
                                     </div>
