--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
                             </select>
                         </div>
                         <div class="d-grid gap-2">
-                            <button class="btn btn-primary" type="submit">Cadastrar</button>
+                            <button class="btn btn-success" type="submit">Cadastrar</button>
                         </div>
                     </form>
                 </div>
