--- a/templates/admin.html
+++ b/templates/admin.html
@@ -111,6 +111,7 @@
                                     <th scope="col">Telefone</th>
                                     <th scope="col">WhatsApp</th>
                                     <th scope="col">Período</th>
+                                    <th scope="col">KM Médio</th>
                                     <th></th>
                                 </tr>
                             </thead>
