--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>H CAR Sys - Sitema de Contro de Revisão Periodica Veicular</title>
     <link href="https://hcarsys.prostart.com.br/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -207,7 +209,8 @@
                 var formData = {
                     usuario: $("#usuario").val(),
                     senha: $("#senha").val(),
-                }
+                };
+
                 $.ajax({
                     type: "POST",
                     url: "/api/login",
@@ -215,10 +218,14 @@
                     context: document.body
                 }).done(function (data, textStatus, xhr) {
                     if (xhr.status == 200) {
-                        window.location.reload()
+                        // Successful login, you might want to redirect or perform other actions
+                        window.location.reload();
+                    } else {
+                        // Handle other response statuses or errors
+                        alert("Login failed. Please check your credentials.");
                     }
-                })
-            })
+                });
+            });
 
             $("#menu_clientes").click(function (event) {
                 event.preventDefault()
@@ -290,11 +297,12 @@
             })
 
             $("#adicionar-usuario").click(function (event) {
-                event.preventDefault()
+                event.preventDefault();
                 var formData = {
                     usuario: $("#novo-usuario").val(),
                     senha: $("#novo-senha").val(),
-                }
+                };
+
                 $.ajax({
                     type: "POST",
                     url: "/api/usuarios",
@@ -302,27 +310,27 @@
                     context: document.body
                 }).done(function (data, textStatus, xhr) {
                     if (xhr.status == 200) {
-                        $('#menu_usuarios').click()
+                        $('#menu_usuarios').click();
                     }
-                })
-            })
+                });
+            });
+
 
             $(document).on('click', '.excluir-usuario', function (event) {
-                event.preventDefault()
-                var formData = {
-                    id: $(this).attr('data-id'),
-                }
+                event.preventDefault();
+                var usuarioId = $(this).attr('data-id');
                 $.ajax({
                     type: "DELETE",
-                    url: "/api/usuarios",
-                    data: formData,
+                    url: "/api/usuarios/" + usuarioId,
                     context: document.body
                 }).done(function (data, textStatus, xhr) {
                     if (xhr.status == 200) {
-                        $('#menu_usuarios').click()
+                        $('#menu_usuarios').click();
                     }
-                })
+                });
             });
+
+
 
             $(document).on('click', '.excluir-cliente', function (event) {
                 event.preventDefault()
