--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>H CAR Sys - Sitema de Contro de Revisão Periodica Veicular</title>
     <link href="https://hcarsys.prostart.com.br/static/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -95,6 +96,11 @@
                 </div>
             </div>
         </div>
+
+
+        
+
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
