--- a/templates/admin.html
+++ b/templates/admin.html
@@ -50,7 +50,7 @@
     <main>
         <div class="container-fluid">
             <div class="row justify-content-center pt-5">
-                {% if session['logado'] == False %}
+                {% if session['logado'] == False %} s
                 <div class="col-sm-12 col-lg-4">
                     <form id="formulario-login">
                         <div class="input-group mb-3">
